Fri Nov  5 10:51:08 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Updated for new location of HTBP library.

Fri Nov  5 11:50:39 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:

          Choose .in() on the any instead of the * operator.  This will help
          Borland get past the ambiguity.

Fri Nov  5 16:14:52 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * tao/DynamicInterface/DII_Arguments.cpp (interceptor_paramlist):

          Do not insert the argument into any Any. Just call replace () to
          make a logical copy of the TAO::Any_impl.

        * tao/PortableServer/Object_Adapter.cpp:
        * tao/PortableServer/POA.cpp:

          Reorganized the lock strategy which prevents deadlocks with
          ImR. Please see

          http://groups.yahoo.com/group/tao-users/message/18317

          for the original bug report and the suggested solution from
          Bill Somerville <bill at classdesign dot com>.

Fri Nov  5 07:02:01 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Security/Big_Request/client.cpp:
        * orbsvcs/tests/Security/Big_Request/run_test.pl:
        * orbsvcs/tests/Security/Big_Request/server.cpp:
        * orbsvcs/tests/Security/Callback/client.cpp:
        * orbsvcs/tests/Security/Callback/run_test.pl:
        * orbsvcs/tests/Security/Callback/server.cpp:
        * orbsvcs/tests/Security/Crash_Test/client.cpp:
        * orbsvcs/tests/Security/Crash_Test/run_test.pl:
        * orbsvcs/tests/Security/Crash_Test/server.cpp:
        * orbsvcs/tests/Security/Secure_Invocation/client.cpp:
        * orbsvcs/tests/Security/Secure_Invocation/run_test.pl:
        * orbsvcs/tests/Security/Secure_Invocation/server.cpp:

          Environment variables are not propagated to child processes (at
          least not Perl's Win32::Process::Create() function.  So, in each